refactor: improve code clarity and immutability, simplify anonymous lambdas, and update dependencies
- Simplified lambda expressions by replacing unused parameter names with underscores (`_`) for conciseness.
- Finalized mutable instance variables where possible to promote immutability.
- Refactored method calls for consistency (e.g., replaced deprecated `get` methods with `getFirst` where applicable, added method `Math.clamp` for readability).
- Removed redundant code and unused methods to reduce clutter.
- Updated Log4j version from 2.25.3 to 2.26.0 in `pom.xml`.
- Added Checkstyle suppression for lambda parameter naming to align with Java 22+ unnamed variables (`_`).